src/objects/ErrorLog__c.object
<CustomObject>
    <description>Created As part of US NOKIASC-27623. This object will be used to capture the exception in Async methods.</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Handling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClassName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ErrorCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ErrorPostedToChatter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Posted To Chatter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MethodRunType__c</fullName>
        <label>Method Run Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QUEUEABLE</fullName>
                </value>
                <value>
                    <fullName>BATCH</fullName>
                </value>
                <value>
                    <fullName>FUTURE</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Process Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReprocessFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprocess Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RetryCount__c</fullName>
        <label>Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SF ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TriggerEvent__c</fullName>
        <label>Trigger Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INSERT</fullName>
                </value>
                <value>
                    <fullName>UPDATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Error Log</label>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>Error ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>